Add api for searching users
