# lib/controllers/global/global.js
@@ -76,3 +76,33 @@ exports.deleteUser = function (request, reply) {
             }
         });
 };
+
+exports.searchUsers = function (request, reply){
+
+    let isadmin = request.query.isadmin;
+    let entityType = request.query.entity_type;
+    let usernamefilter = request.query.username;
+
+    const mongoDB = models.mongoConn.db(config.iscout.mongo.db);
+    const collection = mongoDB.collection(config.iscout.mongo.collections.users);
+
+    let filters = {};
+    if (Object.prototype.hasOwnProperty.call(request.query, "isadmin")) {
+        filters["isadmin"] = (isadmin === "true") ? (1) : (0);
+    }
+    if (entityType === 'player' || entityType === 'scouter') {
+        filters["type"] = entityType;
+    }
+    if (Object.prototype.hasOwnProperty.call(request.query, "username")) {
+        filters["username"] = {$regex : `.*${usernamefilter}.*`};
+    }
+
+    // Gets all teams
+    collection.find(filters).toArray(function(err, data) {
+        if (err){
+            reply.boom.badImplementation(err);
+        } else {
+            reply.status(200).json(data);
+        }
+    });
+};
